# openvino-ep-enabled-onnxruntime

./: CMakeLists.txt  README.md  onnxruntime-test.cpp  onnxruntime-test.py
prebuilt binaries/v1.3.0/win/python/: onnxruntime_openvino-1.3.0-cp36-cp36m-win_amd64.whl
